parser.output
Terminals unused in grammar

    RETURN
    NEQ
    AND
    NEWLINE


State 68 conflicts: 1 shift/reduce
State 83 conflicts: 1 shift/reduce


Grammar

    0 $accept: block $end

    1 block: statement

    2 statement: assignment
    3          | conditional
    4          | print
    5          | loop
    6          | species
    7          | function
    8          | class

    9 assignment: IDENTIFIER ASSIGN if_expression

   10 if_expression: condition COLON block else_block_opt

   11 conditional: IF LBRACKET expression RBRACKET COLON block else_block_opt

   12 else_block_opt: ε
   13               | ELSE COLON block

   14 loop: while_loop
   15     | for_loop

   16 while_loop: WHILE LBRACKET expression RBRACKET COLON block

   17 for_loop: FOR LBRACKET IDENTIFIER IN range RBRACKET COLON block

   18 range: LBRACE NUMBER COLON NUMBER RBRACE

   19 function: FUNCTION IDENTIFIER LBRACKET parameters_opt RBRACKET COLON block

   20 parameters_opt: ε
   21               | parameter_list

   22 parameter_list: IDENTIFIER
   23               | parameter_list COMMA IDENTIFIER

   24 class: CLASS IDENTIFIER COLON block

   25 print: PRINT LBRACKET if_expression RBRACKET

   26 species: SPECIES LBRACKET IDENTIFIER RBRACKET COLON attribute_list

   27 attribute_list: attribute
   28               | attribute_list COMMA attribute

   29 attribute: IDENTIFIER ASSIGN literal

   30 literal: STRING
   31        | NUMBER

   32 expression: condition
   33           | expression OR condition

   34 condition: term
   35          | condition EQ term
   36          | condition NOT term

   37 term: factor
   38     | term DIVIDE factor
   39     | term TIMES factor

   40 factor: IDENTIFIER
   41       | NUMBER
   42       | STRING
   43       | LPAREN if_expression RPAREN
   44       | MINUS factor
   45       | PLUS factor


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER (258) 9 17 19 22 23 24 26 29 40
    NUMBER (259) 18 31 41
    STRING (260) 30 42
    FUNCTION (261) 19
    CLASS (262) 24
    IF (263) 11
    ELSE (264) 13
    WHILE (265) 16
    FOR (266) 17
    IN (267) 17
    SPECIES (268) 26
    RETURN (269)
    ASSIGN (270) 9 29
    LBRACKET (271) 11 16 17 19 25 26
    RBRACKET (272) 11 16 17 19 25 26
    NOT (273) 36
    EQ (274) 35
    DIVIDE (275) 38
    NEQ (276)
    AND (277)
    OR (278) 33
    PRINT (279) 25
    COLON (280) 10 11 13 16 17 18 19 24 26
    COMMA (281) 23 28
    LPAREN (282) 43
    RPAREN (283) 43
    LBRACE (284) 18
    RBRACE (285) 18
    PLUS (286) 45
    MINUS (287) 44
    TIMES (288) 39
    NEWLINE (289)


Nonterminals, with rules where they appear

    $accept (35)
        on left: 0
    block (36)
        on left: 1
        on right: 0 10 11 13 16 17 19 24
    statement (37)
        on left: 2 3 4 5 6 7 8
        on right: 1
    assignment (38)
        on left: 9
        on right: 2
    if_expression (39)
        on left: 10
        on right: 9 25 43
    conditional (40)
        on left: 11
        on right: 3
    else_block_opt (41)
        on left: 12 13
        on right: 10 11
    loop (42)
        on left: 14 15
        on right: 5
    while_loop (43)
        on left: 16
        on right: 14
    for_loop (44)
        on left: 17
        on right: 15
    range (45)
        on left: 18
        on right: 17
    function (46)
        on left: 19
        on right: 7
    parameters_opt (47)
        on left: 20 21
        on right: 19
    parameter_list (48)
        on left: 22 23
        on right: 21 23
    class (49)
        on left: 24
        on right: 8
    print (50)
        on left: 25
        on right: 4
    species (51)
        on left: 26
        on right: 6
    attribute_list (52)
        on left: 27 28
        on right: 26 28
    attribute (53)
        on left: 29
        on right: 27 28
    literal (54)
        on left: 30 31
        on right: 29
    expression (55)
        on left: 32 33
        on right: 11 16 33
    condition (56)
        on left: 34 35 36
        on right: 10 32 33 35 36
    term (57)
        on left: 37 38 39
        on right: 34 35 36 38 39
    factor (58)
        on left: 40 41 42 43 44 45
        on right: 37 38 39 44 45


State 0

    0 $accept: • block $end

    IDENTIFIER  shift, and go to state 1
    FUNCTION    shift, and go to state 2
    CLASS       shift, and go to state 3
    IF          shift, and go to state 4
    WHILE       shift, and go to state 5
    FOR         shift, and go to state 6
    SPECIES     shift, and go to state 7
    PRINT       shift, and go to state 8

    block        go to state 9
    statement    go to state 10
    assignment   go to state 11
    conditional  go to state 12
    loop         go to state 13
    while_loop   go to state 14
    for_loop     go to state 15
    function     go to state 16
    class        go to state 17
    print        go to state 18
    species      go to state 19


State 1

    9 assignment: IDENTIFIER • ASSIGN if_expression

    ASSIGN  shift, and go to state 20


State 2

   19 function: FUNCTION • IDENTIFIER LBRACKET parameters_opt RBRACKET COLON block

    IDENTIFIER  shift, and go to state 21


State 3

   24 class: CLASS • IDENTIFIER COLON block

    IDENTIFIER  shift, and go to state 22


State 4

   11 conditional: IF • LBRACKET expression RBRACKET COLON block else_block_opt

    LBRACKET  shift, and go to state 23


State 5

   16 while_loop: WHILE • LBRACKET expression RBRACKET COLON block

    LBRACKET  shift, and go to state 24


State 6

   17 for_loop: FOR • LBRACKET IDENTIFIER IN range RBRACKET COLON block

    LBRACKET  shift, and go to state 25


State 7

   26 species: SPECIES • LBRACKET IDENTIFIER RBRACKET COLON attribute_list

    LBRACKET  shift, and go to state 26


State 8

   25 print: PRINT • LBRACKET if_expression RBRACKET

    LBRACKET  shift, and go to state 27


State 9

    0 $accept: block • $end

    $end  shift, and go to state 28


State 10

    1 block: statement •

    $default  reduce using rule 1 (block)


State 11

    2 statement: assignment •

    $default  reduce using rule 2 (statement)


State 12

    3 statement: conditional •

    $default  reduce using rule 3 (statement)


State 13

    5 statement: loop •

    $default  reduce using rule 5 (statement)


State 14

   14 loop: while_loop •

    $default  reduce using rule 14 (loop)


State 15

   15 loop: for_loop •

    $default  reduce using rule 15 (loop)


State 16

    7 statement: function •

    $default  reduce using rule 7 (statement)


State 17

    8 statement: class •

    $default  reduce using rule 8 (statement)


State 18

    4 statement: print •

    $default  reduce using rule 4 (statement)


State 19

    6 statement: species •

    $default  reduce using rule 6 (statement)


State 20

    9 assignment: IDENTIFIER ASSIGN • if_expression

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 30
    STRING      shift, and go to state 31
    LPAREN      shift, and go to state 32
    PLUS        shift, and go to state 33
    MINUS       shift, and go to state 34

    if_expression  go to state 35
    condition      go to state 36
    term           go to state 37
    factor         go to state 38


State 21

   19 function: FUNCTION IDENTIFIER • LBRACKET parameters_opt RBRACKET COLON block

    LBRACKET  shift, and go to state 39


State 22

   24 class: CLASS IDENTIFIER • COLON block

    COLON  shift, and go to state 40


State 23

   11 conditional: IF LBRACKET • expression RBRACKET COLON block else_block_opt

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 30
    STRING      shift, and go to state 31
    LPAREN      shift, and go to state 32
    PLUS        shift, and go to state 33
    MINUS       shift, and go to state 34

    expression  go to state 41
    condition   go to state 42
    term        go to state 37
    factor      go to state 38


State 24

   16 while_loop: WHILE LBRACKET • expression RBRACKET COLON block

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 30
    STRING      shift, and go to state 31
    LPAREN      shift, and go to state 32
    PLUS        shift, and go to state 33
    MINUS       shift, and go to state 34

    expression  go to state 43
    condition   go to state 42
    term        go to state 37
    factor      go to state 38


State 25

   17 for_loop: FOR LBRACKET • IDENTIFIER IN range RBRACKET COLON block

    IDENTIFIER  shift, and go to state 44


State 26

   26 species: SPECIES LBRACKET • IDENTIFIER RBRACKET COLON attribute_list

    IDENTIFIER  shift, and go to state 45


State 27

   25 print: PRINT LBRACKET • if_expression RBRACKET

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 30
    STRING      shift, and go to state 31
    LPAREN      shift, and go to state 32
    PLUS        shift, and go to state 33
    MINUS       shift, and go to state 34

    if_expression  go to state 46
    condition      go to state 36
    term           go to state 37
    factor         go to state 38


State 28

    0 $accept: block $end •

    $default  accept


State 29

   40 factor: IDENTIFIER •

    $default  reduce using rule 40 (factor)


State 30

   41 factor: NUMBER •

    $default  reduce using rule 41 (factor)


State 31

   42 factor: STRING •

    $default  reduce using rule 42 (factor)


State 32

   43 factor: LPAREN • if_expression RPAREN

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 30
    STRING      shift, and go to state 31
    LPAREN      shift, and go to state 32
    PLUS        shift, and go to state 33
    MINUS       shift, and go to state 34

    if_expression  go to state 47
    condition      go to state 36
    term           go to state 37
    factor         go to state 38


State 33

   45 factor: PLUS • factor

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 30
    STRING      shift, and go to state 31
    LPAREN      shift, and go to state 32
    PLUS        shift, and go to state 33
    MINUS       shift, and go to state 34

    factor  go to state 48


State 34

   44 factor: MINUS • factor

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 30
    STRING      shift, and go to state 31
    LPAREN      shift, and go to state 32
    PLUS        shift, and go to state 33
    MINUS       shift, and go to state 34

    factor  go to state 49


State 35

    9 assignment: IDENTIFIER ASSIGN if_expression •

    $default  reduce using rule 9 (assignment)


State 36

   10 if_expression: condition • COLON block else_block_opt
   35 condition: condition • EQ term
   36          | condition • NOT term

    NOT    shift, and go to state 50
    EQ     shift, and go to state 51
    COLON  shift, and go to state 52


State 37

   34 condition: term •
   38 term: term • DIVIDE factor
   39     | term • TIMES factor

    DIVIDE  shift, and go to state 53
    TIMES   shift, and go to state 54

    $default  reduce using rule 34 (condition)


State 38

   37 term: factor •

    $default  reduce using rule 37 (term)


State 39

   19 function: FUNCTION IDENTIFIER LBRACKET • parameters_opt RBRACKET COLON block

    IDENTIFIER  shift, and go to state 55

    $default  reduce using rule 20 (parameters_opt)

    parameters_opt  go to state 56
    parameter_list  go to state 57


State 40

   24 class: CLASS IDENTIFIER COLON • block

    IDENTIFIER  shift, and go to state 1
    FUNCTION    shift, and go to state 2
    CLASS       shift, and go to state 3
    IF          shift, and go to state 4
    WHILE       shift, and go to state 5
    FOR         shift, and go to state 6
    SPECIES     shift, and go to state 7
    PRINT       shift, and go to state 8

    block        go to state 58
    statement    go to state 10
    assignment   go to state 11
    conditional  go to state 12
    loop         go to state 13
    while_loop   go to state 14
    for_loop     go to state 15
    function     go to state 16
    class        go to state 17
    print        go to state 18
    species      go to state 19


State 41

   11 conditional: IF LBRACKET expression • RBRACKET COLON block else_block_opt
   33 expression: expression • OR condition

    RBRACKET  shift, and go to state 59
    OR        shift, and go to state 60


State 42

   32 expression: condition •
   35 condition: condition • EQ term
   36          | condition • NOT term

    NOT  shift, and go to state 50
    EQ   shift, and go to state 51

    $default  reduce using rule 32 (expression)


State 43

   16 while_loop: WHILE LBRACKET expression • RBRACKET COLON block
   33 expression: expression • OR condition

    RBRACKET  shift, and go to state 61
    OR        shift, and go to state 60


State 44

   17 for_loop: FOR LBRACKET IDENTIFIER • IN range RBRACKET COLON block

    IN  shift, and go to state 62


State 45

   26 species: SPECIES LBRACKET IDENTIFIER • RBRACKET COLON attribute_list

    RBRACKET  shift, and go to state 63


State 46

   25 print: PRINT LBRACKET if_expression • RBRACKET

    RBRACKET  shift, and go to state 64


State 47

   43 factor: LPAREN if_expression • RPAREN

    RPAREN  shift, and go to state 65


State 48

   45 factor: PLUS factor •

    $default  reduce using rule 45 (factor)


State 49

   44 factor: MINUS factor •

    $default  reduce using rule 44 (factor)


State 50

   36 condition: condition NOT • term

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 30
    STRING      shift, and go to state 31
    LPAREN      shift, and go to state 32
    PLUS        shift, and go to state 33
    MINUS       shift, and go to state 34

    term    go to state 66
    factor  go to state 38


State 51

   35 condition: condition EQ • term

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 30
    STRING      shift, and go to state 31
    LPAREN      shift, and go to state 32
    PLUS        shift, and go to state 33
    MINUS       shift, and go to state 34

    term    go to state 67
    factor  go to state 38


State 52

   10 if_expression: condition COLON • block else_block_opt

    IDENTIFIER  shift, and go to state 1
    FUNCTION    shift, and go to state 2
    CLASS       shift, and go to state 3
    IF          shift, and go to state 4
    WHILE       shift, and go to state 5
    FOR         shift, and go to state 6
    SPECIES     shift, and go to state 7
    PRINT       shift, and go to state 8

    block        go to state 68
    statement    go to state 10
    assignment   go to state 11
    conditional  go to state 12
    loop         go to state 13
    while_loop   go to state 14
    for_loop     go to state 15
    function     go to state 16
    class        go to state 17
    print        go to state 18
    species      go to state 19


State 53

   38 term: term DIVIDE • factor

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 30
    STRING      shift, and go to state 31
    LPAREN      shift, and go to state 32
    PLUS        shift, and go to state 33
    MINUS       shift, and go to state 34

    factor  go to state 69


State 54

   39 term: term TIMES • factor

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 30
    STRING      shift, and go to state 31
    LPAREN      shift, and go to state 32
    PLUS        shift, and go to state 33
    MINUS       shift, and go to state 34

    factor  go to state 70


State 55

   22 parameter_list: IDENTIFIER •

    $default  reduce using rule 22 (parameter_list)


State 56

   19 function: FUNCTION IDENTIFIER LBRACKET parameters_opt • RBRACKET COLON block

    RBRACKET  shift, and go to state 71


State 57

   21 parameters_opt: parameter_list •
   23 parameter_list: parameter_list • COMMA IDENTIFIER

    COMMA  shift, and go to state 72

    $default  reduce using rule 21 (parameters_opt)


State 58

   24 class: CLASS IDENTIFIER COLON block •

    $default  reduce using rule 24 (class)


State 59

   11 conditional: IF LBRACKET expression RBRACKET • COLON block else_block_opt

    COLON  shift, and go to state 73


State 60

   33 expression: expression OR • condition

    IDENTIFIER  shift, and go to state 29
    NUMBER      shift, and go to state 30
    STRING      shift, and go to state 31
    LPAREN      shift, and go to state 32
    PLUS        shift, and go to state 33
    MINUS       shift, and go to state 34

    condition  go to state 74
    term       go to state 37
    factor     go to state 38


State 61

   16 while_loop: WHILE LBRACKET expression RBRACKET • COLON block

    COLON  shift, and go to state 75


State 62

   17 for_loop: FOR LBRACKET IDENTIFIER IN • range RBRACKET COLON block

    LBRACE  shift, and go to state 76

    range  go to state 77


State 63

   26 species: SPECIES LBRACKET IDENTIFIER RBRACKET • COLON attribute_list

    COLON  shift, and go to state 78


State 64

   25 print: PRINT LBRACKET if_expression RBRACKET •

    $default  reduce using rule 25 (print)


State 65

   43 factor: LPAREN if_expression RPAREN •

    $default  reduce using rule 43 (factor)


State 66

   36 condition: condition NOT term •
   38 term: term • DIVIDE factor
   39     | term • TIMES factor

    DIVIDE  shift, and go to state 53
    TIMES   shift, and go to state 54

    $default  reduce using rule 36 (condition)


State 67

   35 condition: condition EQ term •
   38 term: term • DIVIDE factor
   39     | term • TIMES factor

    DIVIDE  shift, and go to state 53
    TIMES   shift, and go to state 54

    $default  reduce using rule 35 (condition)


State 68

   10 if_expression: condition COLON block • else_block_opt

    ELSE  shift, and go to state 79

    ELSE      [reduce using rule 12 (else_block_opt)]
    $default  reduce using rule 12 (else_block_opt)

    else_block_opt  go to state 80


State 69

   38 term: term DIVIDE factor •

    $default  reduce using rule 38 (term)


State 70

   39 term: term TIMES factor •

    $default  reduce using rule 39 (term)


State 71

   19 function: FUNCTION IDENTIFIER LBRACKET parameters_opt RBRACKET • COLON block

    COLON  shift, and go to state 81


State 72

   23 parameter_list: parameter_list COMMA • IDENTIFIER

    IDENTIFIER  shift, and go to state 82


State 73

   11 conditional: IF LBRACKET expression RBRACKET COLON • block else_block_opt

    IDENTIFIER  shift, and go to state 1
    FUNCTION    shift, and go to state 2
    CLASS       shift, and go to state 3
    IF          shift, and go to state 4
    WHILE       shift, and go to state 5
    FOR         shift, and go to state 6
    SPECIES     shift, and go to state 7
    PRINT       shift, and go to state 8

    block        go to state 83
    statement    go to state 10
    assignment   go to state 11
    conditional  go to state 12
    loop         go to state 13
    while_loop   go to state 14
    for_loop     go to state 15
    function     go to state 16
    class        go to state 17
    print        go to state 18
    species      go to state 19


State 74

   33 expression: expression OR condition •
   35 condition: condition • EQ term
   36          | condition • NOT term

    NOT  shift, and go to state 50
    EQ   shift, and go to state 51

    $default  reduce using rule 33 (expression)


State 75

   16 while_loop: WHILE LBRACKET expression RBRACKET COLON • block

    IDENTIFIER  shift, and go to state 1
    FUNCTION    shift, and go to state 2
    CLASS       shift, and go to state 3
    IF          shift, and go to state 4
    WHILE       shift, and go to state 5
    FOR         shift, and go to state 6
    SPECIES     shift, and go to state 7
    PRINT       shift, and go to state 8

    block        go to state 84
    statement    go to state 10
    assignment   go to state 11
    conditional  go to state 12
    loop         go to state 13
    while_loop   go to state 14
    for_loop     go to state 15
    function     go to state 16
    class        go to state 17
    print        go to state 18
    species      go to state 19


State 76

   18 range: LBRACE • NUMBER COLON NUMBER RBRACE

    NUMBER  shift, and go to state 85


State 77

   17 for_loop: FOR LBRACKET IDENTIFIER IN range • RBRACKET COLON block

    RBRACKET  shift, and go to state 86


State 78

   26 species: SPECIES LBRACKET IDENTIFIER RBRACKET COLON • attribute_list

    IDENTIFIER  shift, and go to state 87

    attribute_list  go to state 88
    attribute       go to state 89


State 79

   13 else_block_opt: ELSE • COLON block

    COLON  shift, and go to state 90


State 80

   10 if_expression: condition COLON block else_block_opt •

    $default  reduce using rule 10 (if_expression)


State 81

   19 function: FUNCTION IDENTIFIER LBRACKET parameters_opt RBRACKET COLON • block

    IDENTIFIER  shift, and go to state 1
    FUNCTION    shift, and go to state 2
    CLASS       shift, and go to state 3
    IF          shift, and go to state 4
    WHILE       shift, and go to state 5
    FOR         shift, and go to state 6
    SPECIES     shift, and go to state 7
    PRINT       shift, and go to state 8

    block        go to state 91
    statement    go to state 10
    assignment   go to state 11
    conditional  go to state 12
    loop         go to state 13
    while_loop   go to state 14
    for_loop     go to state 15
    function     go to state 16
    class        go to state 17
    print        go to state 18
    species      go to state 19


State 82

   23 parameter_list: parameter_list COMMA IDENTIFIER •

    $default  reduce using rule 23 (parameter_list)


State 83

   11 conditional: IF LBRACKET expression RBRACKET COLON block • else_block_opt

    ELSE  shift, and go to state 79

    ELSE      [reduce using rule 12 (else_block_opt)]
    $default  reduce using rule 12 (else_block_opt)

    else_block_opt  go to state 92


State 84

   16 while_loop: WHILE LBRACKET expression RBRACKET COLON block •

    $default  reduce using rule 16 (while_loop)


State 85

   18 range: LBRACE NUMBER • COLON NUMBER RBRACE

    COLON  shift, and go to state 93


State 86

   17 for_loop: FOR LBRACKET IDENTIFIER IN range RBRACKET • COLON block

    COLON  shift, and go to state 94


State 87

   29 attribute: IDENTIFIER • ASSIGN literal

    ASSIGN  shift, and go to state 95


State 88

   26 species: SPECIES LBRACKET IDENTIFIER RBRACKET COLON attribute_list •
   28 attribute_list: attribute_list • COMMA attribute

    COMMA  shift, and go to state 96

    $default  reduce using rule 26 (species)


State 89

   27 attribute_list: attribute •

    $default  reduce using rule 27 (attribute_list)


State 90

   13 else_block_opt: ELSE COLON • block

    IDENTIFIER  shift, and go to state 1
    FUNCTION    shift, and go to state 2
    CLASS       shift, and go to state 3
    IF          shift, and go to state 4
    WHILE       shift, and go to state 5
    FOR         shift, and go to state 6
    SPECIES     shift, and go to state 7
    PRINT       shift, and go to state 8

    block        go to state 97
    statement    go to state 10
    assignment   go to state 11
    conditional  go to state 12
    loop         go to state 13
    while_loop   go to state 14
    for_loop     go to state 15
    function     go to state 16
    class        go to state 17
    print        go to state 18
    species      go to state 19


State 91

   19 function: FUNCTION IDENTIFIER LBRACKET parameters_opt RBRACKET COLON block •

    $default  reduce using rule 19 (function)


State 92

   11 conditional: IF LBRACKET expression RBRACKET COLON block else_block_opt •

    $default  reduce using rule 11 (conditional)


State 93

   18 range: LBRACE NUMBER COLON • NUMBER RBRACE

    NUMBER  shift, and go to state 98


State 94

   17 for_loop: FOR LBRACKET IDENTIFIER IN range RBRACKET COLON • block

    IDENTIFIER  shift, and go to state 1
    FUNCTION    shift, and go to state 2
    CLASS       shift, and go to state 3
    IF          shift, and go to state 4
    WHILE       shift, and go to state 5
    FOR         shift, and go to state 6
    SPECIES     shift, and go to state 7
    PRINT       shift, and go to state 8

    block        go to state 99
    statement    go to state 10
    assignment   go to state 11
    conditional  go to state 12
    loop         go to state 13
    while_loop   go to state 14
    for_loop     go to state 15
    function     go to state 16
    class        go to state 17
    print        go to state 18
    species      go to state 19


State 95

   29 attribute: IDENTIFIER ASSIGN • literal

    NUMBER  shift, and go to state 100
    STRING  shift, and go to state 101

    literal  go to state 102


State 96

   28 attribute_list: attribute_list COMMA • attribute

    IDENTIFIER  shift, and go to state 87

    attribute  go to state 103


State 97

   13 else_block_opt: ELSE COLON block •

    $default  reduce using rule 13 (else_block_opt)


State 98

   18 range: LBRACE NUMBER COLON NUMBER • RBRACE

    RBRACE  shift, and go to state 104


State 99

   17 for_loop: FOR LBRACKET IDENTIFIER IN range RBRACKET COLON block •

    $default  reduce using rule 17 (for_loop)


State 100

   31 literal: NUMBER •

    $default  reduce using rule 31 (literal)


State 101

   30 literal: STRING •

    $default  reduce using rule 30 (literal)


State 102

   29 attribute: IDENTIFIER ASSIGN literal •

    $default  reduce using rule 29 (attribute)


State 103

   28 attribute_list: attribute_list COMMA attribute •

    $default  reduce using rule 28 (attribute_list)


State 104

   18 range: LBRACE NUMBER COLON NUMBER RBRACE •

    $default  reduce using rule 18 (range)
